# gdsfill

./: .gitignore  .pylintrc  .yamllint  Cargo.toml  README.rst  REUSE.toml  pyproject.toml  tox.ini
.github/workflows/: build-and-release.yaml  license-check.yaml  lint-rust.yml  pythonpackage.yml
gdsfill/: gdsfill.py
gdsfill/.github/: CODEOWNERS
gdsfill/.github/workflows/: pythonpackage.yml
gdsfill/configs/: ihp-sg13cmos5l.yaml  ihp-sg13g2.yaml
gdsfill/ihp-sg13cmos5l/: constants.yaml  density.py  erase.py  export.py  merge.py  prepare.py
gdsfill/ihp-sg13g2/: config.yaml  constants.yaml  density.py  erase.py  export.py  merge.py  prepare.py
src/: README.md  README.rst  config.rs  density.rs  erase.rs  fill.rs  lib.rs  main.rs
src/configs/: ihp-sg13cmos5l.yaml  ihp-sg13g2.yaml
src/pdk/: ihp_sg13.rs  mod.rs
